# mba-copilot

./: .python-version  Makefile  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json
.next/: trace
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  @ungap.js  attr-accept.js  bail.js  character-entities.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  dequal.js  devlop.js  estree-util-is-identifier-name.js  extend.js  file-selector.js  has-flag.js  hast-util-to-jsx-runtime.js  hast-util-whitespace.js  html-url-attributes.js  inline-style-parser.js  is-plain-obj.js  lucide-react.js  mdast-util-from-markdown.js  mdast-util-to-hast.js  mdast-util-to-string.js  micromark-core-commonmark.js  micromark-factory-destination.js  micromark-factory-label.js  micromark-factory-space.js  micromark-factory-title.js  micromark-factory-whitespace.js  micromark-util-character.js  micromark-util-chunked.js  micromark-util-classify-character.js  micromark-util-combine-extensions.js  micromark-util-decode-numeric-character-reference.js  micromark-util-decode-string.js  micromark-util-encode.js  micromark-util-html-tag-name.js  micromark-util-normalize-identifier.js  (+30 more)
api/: index.py
app/: globals.css  layout.tsx  page.tsx  types.ts
serverless/backend/: index.py
(+11 files in other folders)
